--- a/configuracion.json
+++ b/configuracion.json
@@ -1,1 +1,1 @@
-{"calidadDefecto": "Alta", "calidades": {"Baja": [360, 240], "Media": [480, 360], "Alta": [640, 480]}}
+{"calidadDefecto": "Baja", "calidades": {"Baja": [360, 240], "Media": [480, 360], "Alta": [640, 480]}}
